增强一些功能和规范。